# ProClaw

./: .easignore  .env.example  .env.production  .gitignore  AUTO_SKU_GENERATION_FEATURE.md  CHANGELOG.md  CONTRIBUTING.md  DUAL_MODE_E2E_TEST_REPORT.md  DUAL_MODE_TEST_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  INITIALIZATION_COMPLETE.md  INSTALLATION_GUIDE.md  INVENTORY_MODULE_REPORT.md  KNOWN_ISSUES.md  MCP_CONFIG.md  PHASE0_COMPLETE.md  PHASE0_WEEK2_COMPLETE.md  PHASE0_WEEK3_COMPLETE.md  PHASE1_WEEK1_2_COMPLETE.md  PHASE4_COMPLETION_REPORT.md  PLAN_VERIFICATION.md  PRODUCT_ENHANCEMENT_COMPLETE.md  PURCHASE_SALES_ORDER_AUTO_CODE_FEATURE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  SUPABASE_SETUP.md  SUPPLIER_CUSTOMER_AUTO_CODE_FEATURE.md  TESTING_GUIDE.md  build-check.bat  build-output.txt  build-release.ps1  cargo-test-output.txt  check-build.bat  create-icon.cjs  dev-light.ps1  (+17 more)
ProClips-APP/: DEPLOYMENT.md  PROCLIPS-DAILY-ITERATION-PLAN.md  PROCLIPS-IMPLEMENTATION-PLAN.md  PROCLIPS-TASK-LIST.md  ProClips  项目需求说明书.md
cloud-store/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json  vercel.json
database/: complete_schema.sql  create_profile_trigger.sql  faq_schema.sql  fix_profiles_rls_recursion.sql  migrate_to_ecommerce.sql  seed_iphone_batteries.sql  spu_sku_schema.sql  spu_sku_schema_sqlite.sql  supabase_migration.sql
docs/: ACCEPTANCE_REPORT.md  ACCEPTANCE_TEST_PLAN.md  ADMIN_DASHBOARD_COMPLETE_OVERVIEW.md  ADMIN_DASHBOARD_COMPLETION.md  ADMIN_DASHBOARD_PHASE2_COMPLETION.md  ADMIN_DASHBOARD_PHASE3_COMPLETION.md  ADMIN_PHASE2_README.md  ADMIN_PHASE2_TESTING_GUIDE.md  AI_CHAT_WINDOW_ENHANCEMENTS.md  AI_GUIDE_SYSTEM_OPTIMIZATION.md  API_DOCUMENTATION.md  BLANK_PAGE_FIX.md  README.md  (+56 more)
src-tauri/: Cargo.toml  check_err.txt  check_out.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  setup-wizard.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_commands.rs  agent_profile_commands.rs  agent_sandbox.rs  agent_security.rs  approval_commands.rs  auto_parts_commands.rs  beauty_commands.rs  call_commands.rs  catering_commands.rs  ceo_commands.rs  cloud_backup_commands.rs  commands.rs  common_commands.rs  community_group_buy_commands.rs  convenience_commands.rs  database.rs  decoration_material_commands.rs  finance_agent_commands.rs  finance_commands.rs  fresh_food_commands.rs  hardware_commands.rs  inventory_aging_commands.rs  inventory_calibration_commands.rs  inventory_commands.rs  invitation_commands.rs  invoke_handler.rs  liquor_commands.rs  main.rs  market_commands.rs  message_commands.rs  password_storage_commands.rs  payment_commands.rs  pet_commands.rs  phone_accessories_commands.rs  plugin_loader.rs  plugin_manager.rs  product_commands.rs  purchase_commands.rs  purchase_return_commands.rs  reconciliation_commands.rs  (+13 more)
src-tauri/src/ai/: recognize_order.rs
src-tauri/src/api/: ai.rs  approvals.rs  auth.rs  call.rs  customers.rs  devices.rs  encryption.rs  files.rs  finance.rs  inventory.rs  invitations.rs  livekit.rs  messages.rs  mod.rs  products.rs  purchase_orders.rs  relay.rs  sales_orders.rs  store.rs  subscriptions.rs  suppliers.rs  sync_ws.rs  users.rs  websocket.rs
src-tauri/src/auth/: mod.rs  permissions.rs
src-tauri/src/commands/: mod.rs  stats.rs
src-tauri/src/import/: commands.rs  executor.rs  mapper.rs  mod.rs  parser.rs  templates.rs  types.rs  validator.rs
src-tauri/src/services/: cloud_backup_service.rs  mod.rs  nvwax_billing.rs  nvwax_client.rs  nvwax_commands.rs  product_service.rs  subscription_service.rs  supabase_client.rs
src-tauri/src/utils/: crypto.rs  key_manager.rs  mod.rs  path_safety.rs
src-tauri/tests/: integration_test.rs
(+1542 files in other folders)
