[package]
name = "proclaw-desktop"
version = "0.1.0"
description = "Proclaw Desktop Application"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
directories = "5.0.1"
thiserror = "1.0.50"
uuid = { version = "1.6.0", features = ["v4"] }
tokio = { version = "1.35.0", features = ["full"] }
base64 = "0.21.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
multer = "3.0"
bytes = "1.5"

# HTTP 服务器和 WebSocket
axum = { version = "0.7.0", features = ["multipart", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.0.0"
http-body = "1.0.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }  # 用于生成配对码和加密
futures-util = "0.3.30"  # 用于WebSocket处理

# 异步支持
futures = "0.3.30"
tokio-stream = "0.1.14"
jsonwebtoken = "9.2.0"

# 数据处理
serde_bytes = "0.11.12"
url = "2.5.0"
mime = "0.3.17"

# 工具库
chrono = { version = "0.4.31", features = ["serde", "clock"] }
regex = "1.10.2"
lazy_static = "1.4.0"
dashmap = "5.5.3"
hex = "0.4.3"

# 加密库 (端到端加密)
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"

# 密码哈希 (argon2)
argon2 = "0.5.3"

# HMAC-SHA256 签名（邀请码防伪）
hmac = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
